--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!---
+	Get copyright notice
+--->
 <head>
 	<title>An Exmaple Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
