--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Get copyright notice
 --->
 <head>
-	<title>An Exmaple Website</title>
+	<title>An Exmaple Website Yaah readonly</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content, thats allright
 		</p>
 	</main>
 	<footer class="container">
