--- a/simple.html
+++ b/simple.html
@@ -16,6 +16,7 @@
 <body>
 	<main class="container">
 	<!-- Content Goes Here -->
+	<title>Big trouble</title>
 		<p>
 			Just some content
 			Just some content; Yaah its done.
