DOne with simple.html

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Get copyright notice
 --->
 <head>
-	<title>An Exmaple Website Yaah readonly</title>
+	<title> Yaah readonly</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
